--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
                 <div class="reviewer-item__img">
-                  <img src="/assets/2.png" width="77px" height="77px">
+                  <img src="/assets/2.png" width="77px" height="77px" alt="people-Lisa_Clairton-from.New York">
                 </div>
                 <div class="reviewer-item__title">
                   <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -54,7 +54,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/3.png" width="77px" height="77px">
+                <img src="/assets/3.png" width="77px" height="77px" alt="people-David_Knight-from.Australia">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">David Knight</p>
@@ -72,7 +72,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/4.png" width="77px" height="77px">
+                <img src="/assets/4.png" width="77px" height="77px" alt="people-Lisa_Clairton-from.Paris">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -128,7 +128,7 @@
         </article>
         <div class="recent-projects-block">
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="bed.green-photo">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Winery Dry Creek Building</p>
@@ -138,7 +138,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="table-photo">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Creative Workplace Design</p>
@@ -148,7 +148,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="bed.white-photo">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Bedroom Interior Pot Work</p>
@@ -158,7 +158,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.yellow-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.yellow-photo.png" alt="bed.yellow-photo">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Light Ambience Sepia Design</p>
