--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
       <header class="container headerconteiner">
-      <img class="logo" src="assets/1.png">
+      <img class="logo" src="assets/1.png" alt="logo-image">
       <nav>
         <ul class="navigation-container">
       <li class="headertext">Home</li>
@@ -32,6 +32,7 @@
         <button class="button button-dark button-dark-top">Get Started<img alt="strilka" src="photo.button/1.png"></button>
       </section>
       <section class="container reviews-container">
+        <h2 class="hidden-titles">title</h2>
         <div class="texttitle-reviews">
           <p>What the People Thinks</p>
           <p>About Interno</p>
@@ -40,7 +41,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
                 <div class="reviewer-item__img">
-                  <img src="/assets/2.png" width="77px" height="77px" alt="people-Lisa_Clairton-from.New York">
+                  <img class="reviewer-item__img-picture" src="/assets/2.png" alt="people-Lisa_Clairton-from.New York">
                 </div>
                 <div class="reviewer-item__title">
                   <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -48,13 +49,13 @@
                 </div>
               
             </div>
-            <p class="text-titlerewiews3">We selected Interno interior </br> because of rigorous design </br> background &
+            <p class="text-titlerewiews3">We selected Interno interior <br> because of rigorous design <br> background &
               education.</p>
           </div>
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/3.png" width="77px" height="77px" alt="people-David_Knight-from.Australia">
+                <img class="reviewer-item__img-picture" src="/assets/3.png" alt="people-David_Knight-from.Australia">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">David Knight</p>
@@ -72,7 +73,7 @@
           <div class="reviewer-item">
             <div class="reviewer-item__heading">
               <div class="reviewer-item__img">
-                <img src="/assets/4.png" width="77px" height="77px" alt="people-Lisa_Clairton-from.Paris">
+                <img class="reviewer-item__img-picture" src="/assets/4.png" alt="people-Lisa_Clairton-from.Paris">
               </div>
               <div class="reviewer-item__title">
                 <p class="text-titlerewiews1">Lisa Clairton</p>
@@ -85,6 +86,7 @@
         </div>
         </section>
       <section class="container our_clients">
+        <h2 class="hidden-titles">title</h2>
         <img class="clients client1" src="assets/photo.clients/1.png" alt="Modern Home">
         <img class="clients" src="assets/photo.clients/2.png" alt="BRAND">
         <img class="clients" src="assets/photo.clients/3.png" alt="STYLEINTAGE INTERIOR">
@@ -94,7 +96,9 @@
       <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
       <div class="container">
         <section class="service-block">
+          <h2 class="hidden-titles">title</h2>
           <article class="service-item">
+            <h2 class="hidden-titles">title</h2>
             <p class="service-item-title">Interior Design</p>
             <p class="service-item-text srv-item-text1">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
             <div class="service-item-link">
@@ -103,6 +107,7 @@
             </div>
           </article>
           <article class="service-item">
+            <h2 class="hidden-titles">title</h2>
             <p class="service-item-title">Furniture</p>
             <p class="service-item-text srv-item-text2">Movable articles that are used to make a room or building suitable for living or working.</p>
             <div class="service-item-link">
@@ -111,6 +116,7 @@
             </div>
           </article>
           <article class="service-item">
+            <h2 class="hidden-titles">title</h2>
             <p class="service-item-title">Flooring</p>
             <p class="service-item-text srv-item-text3">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
             <div class="service-item-link">
@@ -122,12 +128,14 @@
       </div>
       <!-- section_recent-projects -->
       <section class="container sctn_recent-projects">
+        <h2 class="hidden-titles">title</h2>
         <article class="recent-projects-text">
           <h2 class="recent-projects-text-title">Recent Projects</h2>
           <p class="recent-projects-text-description">With tools to make every part of your process more human and a support team <br> excited to help you, getting started with us never been easier. </p>
         </article>
         <div class="recent-projects-block">
           <article class="recent-projects-card">
+            <h2 class="hidden-titles">title</h2>
             <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="bed.green-photo">
             <div class="recent-projects-card-text-button">
               <div>
@@ -138,6 +146,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
+            <h2 class="hidden-titles">title</h2>
             <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="table-photo">
             <div class="recent-projects-card-text-button">
               <div>
@@ -148,6 +157,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
+            <h2 class="hidden-titles">title</h2>
             <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="bed.white-photo">
             <div class="recent-projects-card-text-button">
               <div>
@@ -158,6 +168,7 @@
             </div>
           </article>
           <article class="recent-projects-card">
+            <h2 class="hidden-titles">title</h2>
             <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.yellow-photo.png" alt="bed.yellow-photo">
             <div class="recent-projects-card-text-button">
               <div>
@@ -171,6 +182,7 @@
       </section>
       <!-- section_info -->
       <section class="container sctn_info_container">
+        <h2 class="hidden-titles">title</h2>
         <article class="sctn_info_block">
           <h2 class="sctn_info_block-title">We Tackle The Most Challenging Designs</h2>
           <p class="sctn_info_block-text">The world needs innovators and problem solvers who turn challenges into greater opportunities. We have <br> an insatiable curiosity about transformative trends challenging the status.</p>
@@ -197,7 +209,7 @@
       <div class="container">
       <div class="ftr-block">
         <div class="ftr-logo-card">
-          <img src="assets/1.png">
+          <img src="assets/1.png" alt="logo-image">
           <p class="ftr-text">We are the leading architect and interior design firm in the world.</p>
           <a class="logo" href="http://www.facebook.com/"><img src="assets/mi_ne_slyshaly_o_thahite.png" alt="facebook"></a>
           <a class="logo" href="http://twitter.com/"><img src="assets/kak_tebe_takoe_ilon_mask.png" alt="twitter"></a>
@@ -228,7 +240,7 @@
           <h2>Contact</h2>
           <ul class="ftr-list ftr-list-3">
             <li class="ftr-item">
-              53, East Birchwood Ave. </br> Brooklyn, New York 11201, USA.
+              53, East Birchwood Ave. <br> Brooklyn, New York 11201, USA.
             </li>
             <li class="ftr-item">contact@interno.com</li>
             <li class="ftr-item">(123) 456 - 7890</li>
