add new section recent blogs

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </article>
         <div class="recent-projects-block">
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.green-photo.png" alt="Residential Interior Designer">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Winery Dry Creek Building</p>
@@ -138,7 +138,8 @@
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/table-photo.png" alt="Wall
+            Art & Decor House">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Creative Workplace Design</p>
@@ -148,7 +149,8 @@
             </div>
           </article>
           <article class="recent-projects-card">
-            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="">
+            <img class="recent-projects-card-image" src="./assets/recent-projects.photo/bed.white-photo.png" alt="The Interior
+            Value Of Your House">
             <div class="recent-projects-card-text-button">
               <div>
                 <p class="recent-projects-card-title">Bedroom Interior Pot Work</p>
@@ -192,8 +194,10 @@
       </br>
         <p class="titletext-recent-blogs2">Get updates about our latest trends and techniques used in </br>interior design project works.</p>
         <div class="recent-blogs-for_display-flex2">
-      <div class="recent-blogs-containerall">
-        <img src="/assets/recent-blogs-foto1.png" height: 296px; width: 345px; alt="bar counter">
+      <div class="recent-blogs-containerall recent-blogs-container-firstline">
+        <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/recent-blogs-foto1.png" alt="bar counter">
+        </div>
         <p class="text1-recent-blogs-container">Residential Interior Designer </br> In New York, USA</p>
         <div class="recent-blogs-for_display-flex">
         <p class="text2-recent-blogs-container">November 23, 2021</p>
@@ -202,8 +206,10 @@
       </div>
       </div>
       </div>
-      <div class="recent-blogs-containerall">
-        <img src="/assets/recent-blogs-foto2.png" height: 296px; width: 345px; alt="kitchen">
+      <div class="recent-blogs-containerall recent-blogs-container-firstline">
+        <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/recent-blogs-foto2.png" alt="kitchen">
+        </div>
         <p class="text1-recent-blogs-container">How To Choose The Best Wall</br> Art & Decor House?</p>
         <div class="recent-blogs-for_display-flex">
         <p class="text2-recent-blogs-container">November 23, 2021</p>
@@ -212,9 +218,50 @@
       </div>
       </div>
       </div>
-<div class="recent-blogs-containerall">
-        <img src="/assets/recent-blogs-foto3.png" height: 296px; width: 345px; alt="kitchen">
+<div class="recent-blogs-containerall recent-blogs-container-firstline">
+  <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/recent-blogs-foto3.png" alt="kitchen">
+       </div>
         <p class="text1-recent-blogs-container">Tips To Increase The Interior</br> Value Of Your House</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+
+    </div>
+    <div class="recent-blogs-for_display-flex2">
+      <div class="recent-blogs-containerall recent-blogs-container-firstline2">
+        <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/recent-blogs-foto4.png" alt="bar counter">
+      </div>
+        <p class="text1-recent-blogs-container">Best Solution For Any</br> Office & Business Interior</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+      <div class="recent-blogs-containerall recent-blogs-container-firstline2">
+        <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/recent-blogs-foto5.png" alt="kitchen">
+        </div>
+        <p class="text1-recent-blogs-container">Get Solution For Building</br> Construction Work</p>
+        <div class="recent-blogs-for_display-flex">
+        <p class="text2-recent-blogs-container">November 23, 2021</p>
+        <div class="button-recent-blogs">
+        <button class="button button-light"><img alt="strilka" src="photo.button/3.png"></button>
+      </div>
+      </div>
+      </div>
+<div class="recent-blogs-containerall recent-blogs-container-firstline2">
+  <div class="recent-blogs-size_foto">
+        <img src="/assets/foto-recent-blogs/ recent-blogs-foto6.png" alt="kitchen">
+        </div>
+        <p class="text1-recent-blogs-container">Attain The Best Finish</br>For The Kitchen Cabinets</p>
         <div class="recent-blogs-for_display-flex">
         <p class="text2-recent-blogs-container">November 23, 2021</p>
         <div class="button-recent-blogs">
