--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <p class="recent-projects-card-title">Winery Dry Creek Building</p>
                 <p class="recent-projects-card-subtitle">Art Modern</p>
               </div>
-              <button class="button button-light"><img alt="strilka" src="assets/3.png"></button>
+              <button class="button button-light"><img alt="strilka" src="assets/small-dark-strilka.png"></button>
             </div>
           </article>
           <article class="recent-projects-card">
@@ -181,7 +181,7 @@
               <p class="info_card-call-to-action">Call Us Anytime</p>
             </div>
           </div>
-          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="assets/big-dark-strilka.png"></button>
+          <button class="button button-dark button-dark-sctn_info">Get Free Estimate<img alt="strilka" src="assets/big-585goldMid-strilka.png"></button>
         </article>
         <img class="sctn_info_image" src="assets/section_info_image.png" alt="section_info_image">
       </section>
